; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_parse_header_rename.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch_parse.c_parse_header_rename.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32*)* @parse_header_rename to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_header_rename(i8** %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8**, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i8** %0, i8*** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %7, i32* %6, align 4
  %8 = load i32*, i32** %5, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @header_path_len(i32* %9)
  %11 = call i64 @parse_header_path_buf(i32* %6, i32* %8, i32 %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %17

14:                                               ; preds = %2
  %15 = call i8* @git_buf_detach(i32* %6)
  %16 = load i8**, i8*** %4, align 8
  store i8* %15, i8** %16, align 8
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %14, %13
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @parse_header_path_buf(i32*, i32*, i32) #1

declare dso_local i32 @header_path_len(i32*) #1

declare dso_local i8* @git_buf_detach(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
